--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "pg-promise": "^8.6.3"
+    "pg-promise": "^8.6.3",
+    "supervisor": "^0.12.0"
   }
 }
